fix: replaced room card gap to margin

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -10,7 +10,7 @@
   align-items: center;
   font-family: 'Arial Black', Helvetica, sans-serif;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 3;
 }
 
 .menu {
