--- a/src/components/RoomCard/RoomCard.css
+++ b/src/components/RoomCard/RoomCard.css
@@ -4,7 +4,6 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  gap: 5px;
   align-items: center;
   padding: 5px 10px;
   width: 100%;
@@ -23,6 +22,7 @@
 
 .room__info {
   margin: 0;
+  margin-top: 5px;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -36,7 +36,9 @@
 
 .room__subtitle {
   margin: 0;
+  margin-top: 5px;
   font-size: 14px;
+  color: var(--main-text-color);
 }
 
 .room__services {
@@ -63,6 +65,7 @@
   width: 100%;
   gap: 5px;
   height: 27px;
+  margin-top: 5px;
 }
 
 .room__servicesDelButton {
@@ -114,7 +117,6 @@
 @media screen and (min-width: 374px) {
   .room {
     margin-top: 10px;
-    gap: 7px;
   }
 
   .room__delButton {
@@ -126,14 +128,17 @@
   }
 
   .room__info {
+    margin-top: 7px;
     font-size: 16px;
   }
 
   .room__subtitle {
+    margin-top: 7px;
     font-size: 18px;
   }
 
   .room__label {
+    margin-top: 7px;
     height: 30px;
   }
 
